objects/Campaign_Code_Attribution__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Maps single campaign codes in Campaign Content field to multiple other Lead fields for attribution</description>
    <fields>
        <fullName>Branding_Type__c</fullName>
        <label>Branding Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Audience__c</fullName>
        <label>Campaign Audience</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Media_Type__c</fullName>
        <label>Campaign Media Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Medium__c</fullName>
        <label>Campaign Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <label>Campaign Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Term__c</fullName>
        <label>Campaign Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Marketing_Drop_Date_Time__c</fullName>
        <description>Drop date time for Direct Marketing campaigns to automatically attribute to Lead Vintage Spend Date/Time</description>
        <label>Direct Marketing Drop Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inbound_Response_Channel__c</fullName>
        <label>Inbound Response Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Marketing_Channel__c</fullName>
        <label>Outbound Marketing Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Campaign Code Attribution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Campaign_Medium__c</columns>
        <columns>Campaign_Source__c</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>Outbound_Marketing_Channel__c</columns>
        <columns>Direct_Marketing_Drop_Date_Time__c</columns>
        <columns>Branding_Type__c</columns>
        <columns>Campaign_Audience__c</columns>
        <columns>Campaign_Media_Type__c</columns>
        <columns>Campaign_Term__c</columns>
        <columns>Inbound_Response_Channel__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Campaign_Code_Attribution</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Media_Type__c</columns>
        <columns>Campaign_Source__c</columns>
        <columns>Campaign_Medium__c</columns>
        <columns>Branding_Type__c</columns>
        <columns>Campaign_Audience__c</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Inbound_Response_Channel__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>Outbound_Marketing_Channel__c</columns>
        <columns>Direct_Marketing_Drop_Date_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Campaign Code Attribution</label>
    </listViews>
</CustomObject>